RESOLVED FIXED116727
AX: iOS ignores ARIA progressbar elements
https://bugs.webkit.org/show_bug.cgi?id=116727
Summary AX: iOS ignores ARIA progressbar elements
chris fleizach
Reported 2013-05-24 10:08:40 PDT
As an example, this is ignored <div class="popularity" role="progressbar" aria-label="Popularity" aria-valuemin="0" aria-valuenow="5" aria-valuemax="12"> </div>
Attachments
patch (5.02 KB, patch)
2013-06-03 12:37 PDT, chris fleizach
no flags
patch (16.62 KB, patch)
2013-06-03 12:39 PDT, chris fleizach
no flags
patch (6.69 KB, patch)
2013-06-03 12:42 PDT, chris fleizach
no flags
chris fleizach
Comment 1 2013-05-24 10:13:06 PDT
chris fleizach
Comment 2 2013-06-03 12:37:46 PDT
chris fleizach
Comment 3 2013-06-03 12:39:44 PDT
chris fleizach
Comment 4 2013-06-03 12:42:42 PDT
David Kilzer (:ddkilzer)
Comment 5 2013-06-06 08:52:26 PDT
Comment on attachment 203621 [details] patch r=me
WebKit Commit Bot
Comment 6 2013-06-06 09:27:16 PDT
Comment on attachment 203621 [details] patch Clearing flags on attachment: 203621 Committed r151275: <http://trac.webkit.org/changeset/151275>
WebKit Commit Bot
Comment 7 2013-06-06 09:27:18 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.