AX: iOS ignores ARIA progressbar elements https://bugs.webkit.org/show_bug.cgi?id=116727

Reviewed by David Kilzer.

Source/WebCore:

Make this an accessible element on iOS.

Test: platform/iphone-simulator/accessibility/progressbar.html

* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper determineIsAccessibilityElement]):
(-[WebAccessibilityObjectWrapper _accessibilityMinValue]):
(-[WebAccessibilityObjectWrapper _accessibilityMaxValue]):

Tools:

* DumpRenderTree/ios/AccessibilityUIElementIOS.mm:
(AccessibilityUIElement::minValue):
(AccessibilityUIElement::maxValue):

LayoutTests:

* platform/iphone-simulator/accessibility/progressbar-expected.txt: Added.
* platform/iphone-simulator/accessibility/progressbar.html: Added.


Canonical link: https://commits.webkit.org/135548@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151275 268f45cc-cd09-0410-ab3c-d52691b4dbfc